added base files and styles

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -28,6 +28,11 @@ select {
   font: inherit;
 }
 
+button{
+  border:none;
+  background-color:transparent;
+}
+
 @media (prefers-reduced-motion: reduce) {
   *,
   *::before,
