--- a/src/views/Home/Index.scss
+++ b/src/views/Home/Index.scss
@@ -12,11 +12,18 @@ main {
 }
 
 .Map {
-  background-color: green;
-  height: 50rem;
+  height: 55rem;
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   z-index: -2;
+}
+
+.Leaflet {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
 }
