--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 .Header {
   background-image: url("../../images/pattern-bg.png");
   background-size: cover;
-  height: 40vh;
+  height: 30rem;
   padding-top: 3rem;
   font-family: var(--primary-font);
   font-weight: 400;
