--- a/src/components/IpCard/IpCard.scss
+++ b/src/components/IpCard/IpCard.scss
@@ -3,7 +3,7 @@
   display: flex;
   padding: 3rem 0rem;
   border-radius: 1.5rem;
-
+  box-shadow: 0rem 1rem 4rem rgba(0, 0, 0, 0.45);
   &__info {
     flex: 0 0 20%;
     padding: 0rem 3rem;
