--- a/src/styles/abstracts/mixins.scss
+++ b/src/styles/abstracts/mixins.scss
@@ -1,5 +1,7 @@
+$desktop-small: 960px;
+$tablet: 800px;
+$tablet-small: 500px;
 $mobile: 375px;
-
 @mixin respondMax($size) {
   @media (max-width: $size/16px *1em) {
     @content;
