--- a/src/components/IpCard/IpCard.scss
+++ b/src/components/IpCard/IpCard.scss
@@ -12,7 +12,7 @@
   }
 
   &__info {
-    flex: 0 0 20%;
+    flex: 1 0 20%;
     padding: 0rem 3rem;
     &:not(:last-child) {
       border-right: 1px solid lightgrey;
@@ -37,5 +37,6 @@
     font-size: var(--fs-500);
     letter-spacing: -0.23px;
     line-height: 3rem;
+    word-break: break-word;
   }
 }
